# pokesandwich

./: .gitignore  404.html  CNAME  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json  tailwind.css
.github/workflows/: deploy.yaml  gh-pages.yaml
assets/: pokedex-2aa31d2c51637072.js  pokedex-2aa31d2c51637072.js.br  pokedex-c20ec13a1e8c8da3.js  pokedex-c20ec13a1e8c8da3.js.br  pokedex_bg-508ce316a5bbd183.wasm  pokedex_bg-508ce316a5bbd183.wasm.br  pokedex_bg-6115b83722e76a75.wasm  pokedex_bg-6115b83722e76a75.wasm.br  pokedex_bg-f933f3d72e07c7d5.wasm  pokedex_bg-f933f3d72e07c7d5.wasm.br  tailwind-e3ebc7d5e813fd48.css  tailwind-e3ebc7d5e813fd48.css.br
assets/dioxus/: pokesandwich.js  pokesandwich_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
graph/: query.graphql  schema.graphql
public/: tailwind.css
src/: consts.rs  dex_by_type.rs  favourites.rs  focus.rs  footer.rs  google_analytics.rs  home.rs  main.rs
src/pokemon_finder/: mod.rs  pokemon_finder.rs
src/shiny_dex/: dex_by_type.rs  favourites.rs  focus.rs  mod.rs  shiny_dex.rs
