[package]
name = "pokesandwich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
futures = "0.3.16"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
