[package]
name = "pokesandwich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
phf = { version = "0.11", features = ["macros"] }
gloo-storage = "0.3.0"
